# 2025Morai

./: .gitignore
src/controller/: CMakeLists.txt  package.xml
src/controller/launch/: controller.launch
src/controller/scripts/: controller_node.py
src/lane_follower/: CMakeLists.txt  package.xml
src/lane_follower/lane_follower/: detection.py  perception.py  utils.py
src/lane_follower/launch/: lane_follower.launch
src/lane_follower/scripts/: lane_follower_node.py
src/mission_main/: CMakeLists.txt  package.xml
src/mission_main/launch/: mission_main.launch
src/sequence_manager/: CMakeLists.txt  package.xml
src/sequence_manager/launch/: sequence_manager.launch
src/sequence_manager/scripts/: sequence_enum.py  sequence_manager_node.py
src/sequence_manager/sequence_manager/: sequence_enum.py
src/traffic_light/: CMakeLists.txt  package.xml
src/traffic_light/launch/: traffic_light.launch
src/traffic_light/scripts/: traffic_light_node.py
src/traffic_light/traffic_light/: decision.py  perception.py
