<?xml version="1.0"?>
<package format="2">
  <name>lane_follower</name>
  <version>0.0.1</version>
  <description>Lane detection and following node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
