<?xml version="1.0"?>
<package format="2">
  <name>sequence_manager</name>
  <version>0.1.0</version>
  <description>State/sequence-based mission selector that multiplexes steer/speed from mission nodes.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
